# chord-gen-web

./: Cargo.toml  TODO.md
.github/workflows/: deploy.yml
frontend/: .env  .env.production  humans.txt  index.html  package-lock.json  package.json
frontend/css/: main.css
frontend/js/: main.js
src/: main.rs
