[package]
name = "chord-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chord-gen = { path = "../chord-gen" }
actix-web = "4.2.1"
env_logger = "0.10.0"
log = "0.4.16"
serde = { version = "1.0.149", features = ["derive"] }